fixed spacing for mobile pricing

--- a/css/pricing.css
+++ b/css/pricing.css
@@ -21,7 +21,8 @@ button {
     display: flex;
     flex-direction: column;
     margin: auto; 
-    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 50px;
     width: 70%;
     padding: 25px 10px;
     text-align: center;
